Palladium-JazzHR/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>BASE_Currently_Employed__c</fullName>
        <description>Added for BASE 14/08/2017. This field type was requested in place of a checkbox because the data type was not compatible with the form stack question for this field.</description>
        <label>Currently Employed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BASE_Local_Ward__c</fullName>
        <description>This field is populated programmatically via the API based on a CSV file of local postcodes.</description>
        <inlineHelpText>If applicable this field will show the local ward that the candidate&apos;s postcode is in.</inlineHelpText>
        <label>BASE Local Ward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BASE_Require_visa_work_permit__c</fullName>
        <description>Added for BASE 14/08/2017. This field type was requested in place of a checkbox because the data type was not compatible with the form stack question for this field.</description>
        <inlineHelpText>If not British, do they require a visa/work permit to work in the UK?</inlineHelpText>
        <label>Require visa/work permit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Enquiry_Received__c</fullName>
        <label>Date Enquiry Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_received__c</fullName>
        <formula>Date_Enquiry_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Added for BASE 12/06/17.</description>
        <inlineHelpText>Nationality as identified by passport.</inlineHelpText>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>